# webrtc-camera-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml  justfile
scripts/: smoke-test.ps1
src/: camera.rs  config.rs  logging.rs  main.rs  peer.rs  pipeline.rs  signaling.rs
templates/: index.html
test-client/: index.html
