[package]
name = "webrtc-camera-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# GStreamer (camera capture, encoding, WebRTC transport)
gstreamer = "0.23"
gstreamer-webrtc = "0.23"
gstreamer-sdp = "0.23"
glib = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP + WebSocket signaling
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging + errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1"
sysinfo = "0.38.4"

# .env file loading
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
